feat: excluido os testes da classe beans, consertado os erros detectados nos testes modificados